syntax = "proto3";

package api;
option go_package = "/api";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";

import "pagination.proto";

message Client {
  string client_id = 1;
  string username = 2;
  uint32 keep_alive = 3;
  int32 version = 4;
  bool will_retain = 5;
  uint32 will_qos = 6;
  string will_topic = 7;
  string will_payload = 8;
  string remote_addr = 9;
  string local_addr = 10;
  uint32 subscriptions_current = 11;
  uint32 subscriptions_total = 12;
  uint64 packets_received_bytes = 13;
  uint64 packets_received_nums = 14;
  uint64 packets_send_bytes = 15;
  uint64 packets_send_nums = 16;
  uint64 message_dropped = 17;
  uint32 inflight_len = 18;
  uint32 queue_len = 19;

  google.protobuf.Timestamp connected_at = 99;
  google.protobuf.Timestamp disconnected_at = 100;
}

message Subscription {
  uint32 id = 1;
  string client_id = 2;
  string topic_name = 3;
  string name = 4;
  uint32 qos = 5;
  bool no_local = 6;
  bool retain_as_published = 7;
  uint32 retain_handling = 8;
}

message GetClientRequest {
  string id = 1;
}

message GetClientListResult {
  repeated Client items = 1;
  Meta meta = 2;
}

message SubscriptionPaginationRequest {
  uint64 page = 1;
  uint64 limit = 2;
  string sort = 3;
  optional string client_id = 4;
}

message GetSubscriptionListResult {
  repeated Subscription items = 1;
  Meta meta = 2;
}

service MqttService {

  // get client by id
  rpc GetClientById (GetClientRequest) returns (Client){
    option (google.api.http) = {
      get: "/v1/mqtt/client/{id}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // get client list
  rpc GetClientList (PaginationRequest) returns (GetClientListResult){
    option (google.api.http) = {
      get: "/v1/mqtt/clients"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // get subscription list
  rpc GetSubscriptionList (SubscriptionPaginationRequest) returns (GetSubscriptionListResult){
    option (google.api.http) = {
      get: "/v1/mqtt/subscriptions"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }
}
